// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headings with headline data should render correctly 1`] = `
<DocumentFragment>
  .c0 {
  color: #222222;
  font-family: ReithSerifNewsMedium,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 2rem 0 1rem 0;
  font-size: 1.75em;
  line-height: 2rem;
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c0 {
    font-size: 2em;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5em) {
  .c0 {
    font-size: 2.75em;
    line-height: 3rem;
  }
}

<h1
    class="c0"
  >
    This is a headline!
  </h1>
</DocumentFragment>
`;

exports[`Headings with subheadline data should render correctly 1`] = `
<DocumentFragment>
  .c0 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 1rem 0;
  font-weight: 400;
  font-size: 1.25em;
  line-height: 1.5rem;
}

@media (min-width:20em) and (max-width:37.4375em) {
  .c0 {
    font-size: 1.5em;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5em) {
  .c0 {
    font-size: 2em;
    line-height: 2.25rem;
  }
}

<h2
    class="c0"
    id="This-is-a-subheadline"
    tabindex="-1"
  >
    This is a subheadline
  </h2>
</DocumentFragment>
`;
